Add display block to header__content-link @<=500px

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -115,6 +115,10 @@ body {
 @media(max-width: 500px) {
   .header {
     grid-template-columns: 110px 1fr;
+    &__content-link {      
+      display: block;                 
+      margin-bottom: 1rem;      
+    }
   }
   .card {
     display: block;
