Add red--dark to .card small

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 $red: #d44136;
+$red--dark: #bb3127;
 $black: #1f1912;
 $black--light: rgba(0,0,0,0.6);
 
@@ -70,7 +71,7 @@ body {
     flex: 50%;
   }
   small {
-    color: $red;    
+    color: $red--dark;    
     font-style: normal;
     font-family: 'Courier New', Courier, monospace;
   }
