--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -80,7 +80,7 @@ body {
     text-align: right;
     a {
       display: inline-block;
-      margin-bottom: 0.5rem;
+      margin-right: 0.35rem;
     }
     p {
       line-height: 145%;
