--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -161,8 +161,8 @@ body {
     display: block;
     &__content {
       text-align: left;
-      border-top: 0;
-      padding: 10px;
+      border-top: 0;      
+      padding: 0;
       h3:after {
         left: 0;
       }
