Fix .btn margin for .header links

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -75,7 +75,7 @@ body {
   display: grid;
   grid-template-columns:  1fr 380px;
   .btn {
-    margin-right: 1rem;
+    margin-left: 1rem;
   }
   &__title {    
     // outline: 1px dashed blueviolet;s
