--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -85,13 +85,17 @@ body {
     transform: rotate(180deg);
   }  
   &__content {
-    // outline: 1px dashed orange;        
+    // outline: 1px dashed orange;   
+    padding: 30px 0;     
     letter-spacing: 2px;
     font-size: 18px;
     max-width: 400px;     
     margin: 20px 0;      
     margin-right: 0;
-    text-align: right;    
+    text-align: right;  
+    p {
+      margin-bottom: 20px;
+    }  
   }
 }
 
