Add landing__title padding for small devices

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -189,7 +189,7 @@ body {
     display: block;
     &__title {            
       display: block;
-      padding-right: 0;    
+      padding-bottom: 50px;    
       h1 {
         position: relative;
         display: inline;
