--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -172,6 +172,9 @@ body {
   }
   .card {
     display: block;
+    &__img {
+      margin-bottom: 1.75rem;
+    }
     &__content {
       text-align: left;
       border-top: 0;      
@@ -204,4 +207,5 @@ body {
       margin-top: 50px;            
     }
   }
+
 }
