--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,9 +42,9 @@ body {
   font-size: 12px;
   text-decoration: none;
   padding: 5px 10px;
-  background: #c2b7b633;
+  background: #d6aca833;
   letter-spacing: 1px;
-  color: $red;
+  color: $red--dark;
   transition: all 400ms ease;
   &--big {
     padding: 10px 20px;
