--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,9 @@
 $red: #d44136;
 $red--dark: #bb3127;
 $red--bg: #d6aca833;
-$black: #1f1912;
+$black: #3d352c;
 $black--light: rgba(0,0,0,0.7);
+$light: #f5f5f5;
 
 $card-padding: 30px;
 
@@ -15,6 +16,22 @@ body {
 .fluid {
   max-width: 100%;
   height: auto;
+}
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  // align-items: flex-start;
+}
+.flex__item {
+  flex-grow: 1;
+}
+
+small {
+  color: $red--dark;    
+  font-style: normal;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .container {
@@ -37,6 +54,47 @@ body {
     color: $red;  
   }  
 }  
+
+.form {
+  // outline: 1px solid red;  
+  padding-top: 20px;
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+}
+.form__item {  
+  // outline: 1px solid green;        
+  label {
+    display: block;    
+  }
+  input,
+  textarea {
+    box-sizing: border-box;     
+    width: 100%;
+    display: block;
+    padding: 10px;
+    border: none;
+    background: $light;
+  }
+  .btn {    
+    position: relative;
+    cursor: pointer;
+    justify-self: center;
+    display: block;
+    border: none;
+    margin-top: 1rem;
+    padding: 14px;
+    height: 100%;
+    width: 100%;
+    font-size: 18px;
+    span {      
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      font-size: initial;      
+    }
+  }
+}
 
 .btn {
   position: relative;
@@ -65,6 +123,10 @@ body {
   }
   &:hover {
     color: white;
+    small {
+      transition: all 400ms ease;
+      color: white;
+    }
     &:before {    
       width: 100%;
     } 
