--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -146,7 +146,7 @@ small {
   display: grid;
   grid-template-columns:  1fr 400px;
   .btn {
-    margin-right: 1rem;
+    margin-left: 1rem;
   }
   &__title {    
     // outline: 1px dashed blueviolet;s
@@ -161,6 +161,7 @@ small {
     font-size: 24px;    
     margin: 60px 0;      
     margin-right: 0;    
+    text-align: right;
   }
 }
 
@@ -236,9 +237,9 @@ small {
     padding: 7px 14px;
   }
   .header {
-    grid-template-columns: 100px 1fr;
+    grid-template-columns: 80px 1fr;
     .btn {
-      margin-right: 0.45rem;
+      margin-left: 0.45rem;
       margin-top: 0.45rem;
     }
     &__content {
