--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -156,10 +156,9 @@ small {
     transform: rotate(180deg);
   }  
   &__content {    
-    padding: 30px 0;     
+    padding: 16vh 0;     
     letter-spacing: 2px;
     font-size: 24px;    
-    margin: 60px 0;      
     margin-right: 0;    
     text-align: right;
   }
@@ -320,10 +319,8 @@ small {
         transform: rotate(0);
       }        
     }
-    &__content {  
-      padding: 0 10px;    
-      margin: 0 auto;        
-      margin-top: 50px;            
+    &__content {        
+      margin: 0 auto;                
     }
   }
 
