Refactor css for 404, thanks pages

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,11 +34,14 @@ small {
   font-family: 'Courier New', Courier, monospace;
 }
 
-.success {    
+.center {
+  text-align: center;
+}
+
+.box {    
   box-shadow: 0 0.938em 2.188em rgba(50,50,93,.1), 0 0.313em 0.938em rgba(0,0,0,.07);
   margin-top: 20px;
   padding: 50px 0;
-  text-align: center;
 }
 
 .container {
