--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,10 @@ body {
   color: $black;
 }
 
+.pad__vertical{
+  padding: 50px 0;
+}
+
 .fluid {
   max-width: 100%;
   height: auto;
@@ -22,8 +26,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  // align-items: flex-start;
 }
+
 .flex__item {
   flex-grow: 1;  
 }
